# geno-bench

./: .gitignore  GENO.md  README.md  SKILL.md  genotools.yaml  mkdocs.yml  pyproject.toml
docs/: getting-started.md  index.md
geno_bench/: __init__.py
geno_bench/cli/: analyze_session.py  list_sessions.py
skills/geno-bench/: SKILL.md
